--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+server.port=8080
 
+# Datasource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/explotowns
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=POSTGRESQL
+
+
+# HikariCP
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.connectionTimeout=50000
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=15
+spring.datasource.hikari.idleTimeout=10000
+spring.datasource.hikari.maxLifetime=50000
+spring.datasource.hikari.autoCommit=true
+
+jwt.secret=8slkjlsdkfsdnsd
+jwt.expiration=50000000
